# watch-clipboard-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: main.rs
